# Agentic_AI

browser-agent/: .gitignore  README.md  main.py  pyproject.toml
browser-agent/src/: agent.py  tools.py
data-analyst-agent/: .gitignore  README.md  main.py  pyproject.toml
data-analyst-agent/src/: agent.py  tools.py
langgraph-learnings/: README.md  condition.ipynb  example.py  langsmith.ipynb  main.ipynb  main.py  pyproject.toml  simple_graph.ipynb
rag-cli/: .gitignore  README.md  main.py  pyproject.toml
rag-cli/src/: core.py  ingest.py  query.py
research-agent/: .gitignore  README.md  main.py  pyproject.toml
research-agent/src/: __init__.py  agent.py  config.py  memory.py  tools.py
